# telliJASE

./: .flake8  AGENTS.md  AY-3-8914.md  CLAUDE.md  LICENSE  PROGRAMMING_THE_SOUND_CHIP.md  PROJECT_FILE_FORMAT.md  README.md  VCL-0.1-Experimental.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AY-3-8914-ARCHITECTURE.md  REFACTOR-COMPLETE.md  RESEARCH-SUMMARY.md
tellijase/: __init__.py  __main__.py  app.py  main.py
tellijase/audio/: __init__.py  engine.py  player.py  pygame_player.py  stream.py  synthesizer.py
tellijase/models/: __init__.py  project.py  psg_channel.py  psg_state.py
tellijase/psg/: __init__.py  shadow_state.py  utils.py
tellijase/storage/: __init__.py  io.py  project_model.py
tellijase/ui/: jam_controls.py  timeline.py
tests/: test_audio_engine.py  test_project_io.py  test_project_model.py  test_psg_state.py  test_shadow_state.py
