[project]
name = "tellijase"
version = "0.1.0"
description = "Just A Sound Editor for the Intellivision AY-3-8914 PSG"
readme = "README.md"
authors = [
    { name = "Andrew Potozniak", email = "vibecoder.1.z3r0@gmail.com" }
]
license = { text = "MIT OR VCL-0.1-Experimental" }
requires-python = ">=3.8,<3.15"
dependencies = [
    "PySide6>=6.2.0,<6.9.0",
    "numpy>=1.21.0,<1.25.0; python_version == '3.8'",
    "numpy>=1.21.0,<1.27.0; python_version == '3.9'",
    "numpy>=1.21.0; python_version >= '3.10'",
    "sounddevice>=0.4.6",
    "pygame>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.3",
    "isort>=5.13",
    "mypy>=1.8"
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
packages = ["tellijase"]
